Fix wrapped text after hiding the toc menu

--- a/view/index.css
+++ b/view/index.css
@@ -33,3 +33,7 @@ aside.menu {
 #font-size {
     margin-top: 8px;
 }
+.epub-view,
+.epub-view iframe {
+	width: 100% !important;
+}
